--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "echo-app",
-    "slug": "echo-app",
-    "version": "1.0.0",
+    "name": "echo",
+    "slug": "echo",
+    "version": "0.2.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
