--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "echo-app",
-  "version": "1.0.0",
+  "name": "echo",
+  "version": "0.2.1",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -9,14 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@shopify/flash-list": "1.7.6",
+    "@stagewise/toolbar-react": "^0.1.2",
+    "@tanstack/react-query": "^5.79.0",
     "expo": "~53.0.7",
+    "expo-blur": "~14.1.4",
+    "expo-haptics": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.20.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-dom": "^19.1.5",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.8.3"
   },
   "private": true
